# conan-example

./: .travis.yml  README.md
.github/workflows/: build.yml  ubuntu_build.yml  visual_studio_build.yml
conan/: conanfile.txt
executable/: CMakeLists.txt  README.md
executable/conan/: conanfile.txt
executable/src/: main.cpp
